providers/github/tests/snapshots/actions-runs__00-list-hello-world.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 0: list /octocat/Hello-World
actions  dir  -  -
issues  dir  -  -
pulls  dir  -  -
repo  dir  -  -
repo.json  file  5191  dynamic
canonical:
  /octocat/Hello-World/repo.json  sha256:bbe9787d22363542ac3e8931f25ee8aa3db7cf3839606e8b990e06927c6c2b33
fs:
  (none)
invalidations:
  (none)
