providers/github/tests/snapshots/actions-runs__01-lookup-runs.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 1: lookup /octocat/Hello-World/actions :: runs
entry: runs dir
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
