providers/github/tests/snapshots/actions-runs__02-list-runs.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 2: list /octocat/Hello-World/actions/runs
22796200342  dir  -  -
23031637328  dir  -  -
23372736275  dir  -  -
28205921175  dir  -  -
canonical:
  (none)
fs:
  /octocat/Hello-World/actions/runs/22796200342/conclusion  file dynamic - 7 inline
  /octocat/Hello-World/actions/runs/22796200342/status  file dynamic - 9 inline
  /octocat/Hello-World/actions/runs/23031637328/conclusion  file dynamic - 7 inline
  /octocat/Hello-World/actions/runs/23031637328/status  file dynamic - 9 inline
  /octocat/Hello-World/actions/runs/23372736275/conclusion  file dynamic - 7 inline
  /octocat/Hello-World/actions/runs/23372736275/status  file dynamic - 9 inline
  /octocat/Hello-World/actions/runs/28205921175/conclusion  file dynamic - 7 inline
  /octocat/Hello-World/actions/runs/28205921175/status  file dynamic - 9 inline
invalidations:
  (none)
