providers/github/tests/snapshots/actions-runs__06-read-conclusion.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 6: read /octocat/Hello-World/actions/runs/22796200342/conclusion
attrs: dynamic - 7
bytes (7):
failure
canonical:
  /octocat/Hello-World/actions/runs/22796200342/conclusion  sha256:c0aa7b874b344f6e06d8f4faa0d4d9432d5fb706d4984d008f4fb3b274107246
  /octocat/Hello-World/actions/runs/22796200342/run.json  sha256:c0aa7b874b344f6e06d8f4faa0d4d9432d5fb706d4984d008f4fb3b274107246
  /octocat/Hello-World/actions/runs/22796200342/status  sha256:c0aa7b874b344f6e06d8f4faa0d4d9432d5fb706d4984d008f4fb3b274107246
fs:
  (none)
invalidations:
  (none)
